Dark Mode Fix

--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -4,7 +4,6 @@
   font-size: 1.5rem;
   text-align: flex-start;
   text-decoration: none;
-  color: #ffffff;
   list-style: none;
   margin: 0.5rem;
 }
